set visibility to true for ebook to make sure it works correctly,try new font

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 @custom-variant dark (&:is(.dark *));
 
 body {
-    font-family: 'Khmer OS Battambang', sans-serif;
+    font-family: 'Khmer OS Battambang',"lato",sans-serif;
 }
 
 @theme {
